--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<h1>hallo</h1>
+<mat-drawer-container class="mat-drawer-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+        <p>Auto-resizing sidenav</p>
+    </mat-drawer>
+
+    <div class="example-sidenav-content">
+
+        <mat-toolbar color="primary">
+            <mat-toolbar-row>
+                <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                <span>Simple CRM</span>
+            </mat-toolbar-row>
+        </mat-toolbar>
+
+    </div>
+
+</mat-drawer-container>
