--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-    <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+        <div class="logo-container">
+        platz für logo
+    </div>
+
+    <ul class="menu-items">
+        <li routerLink="/" routerLinkActive="router-link-active" ><mat-icon>fact_check</mat-icon>  Dashboard</li>
+        <li routerLink="/user" routerLinkActive="router-link-active" ><mat-icon>perm_identity</mat-icon> User</li>
+    </ul>
     </mat-drawer>
 
     <div class="example-sidenav-content">
-
         <mat-toolbar color="primary">
             <mat-toolbar-row>
                 <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
@@ -12,6 +18,9 @@
             </mat-toolbar-row>
         </mat-toolbar>
 
+        <div class="router-container">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 
 </mat-drawer-container>
