--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -4,13 +4,13 @@
   <div>
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>First Name</mat-label>
-      <input matInput placeholder="">
+      <input [(ngModel)]="user.firstName" matInput placeholder="">
       <!-- <mat-hint>Please enter a name</mat-hint> -->
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Last Name</mat-label>
-      <input matInput placeholder="">
+      <input [(ngModel)]="user.lastName" matInput placeholder="">
       <!-- <mat-hint>Please enter a lastname</mat-hint> -->
     </mat-form-field>
   </div>
@@ -18,7 +18,7 @@
   <div>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Birth Date</mat-label>
-      <input matInput placeholder="" [matDatepicker]="picker">
+      <input [(ngModel)]="birthDate" matInput placeholder="" [matDatepicker]="picker">
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
       <!-- <mat-hint>Please enter a birth date</mat-hint> -->
@@ -28,7 +28,7 @@
   <div>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Street + House No.</mat-label>
-      <input matInput placeholder="">
+      <input [(ngModel)]="user.street" matInput placeholder="">
       <!-- <mat-hint>Please enter a lastname</mat-hint> -->
     </mat-form-field>
   </div>
@@ -36,13 +36,13 @@
   <div>
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>Zip code</mat-label>
-      <input matInput placeholder="">
+      <input [(ngModel)]="user.zipCode" matInput placeholder="">
       <!-- <mat-hint>Please enter a lastname</mat-hint> -->
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>City</mat-label>
-      <input matInput placeholder="">
+      <input [(ngModel)]="user.city" matInput placeholder="">
       <!-- <mat-hint>Please enter a lastname</mat-hint> -->
     </mat-form-field>
   </div>
@@ -50,5 +50,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button>Cancel</button>
-  <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+  <button mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
