show user infos

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,5 +52,11 @@ mat-toolbar, mat-toolbar-row{
 
 .router-container{
     padding-left: 56px;
+    padding-right: 56px;
     padding-top: 16px;
+}
+
+.logo{
+    width: 55px;
+    height: auto;
 }
