--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -20,6 +20,13 @@
 
     <div>
       <mat-form-field appearance="outline" class="full-width">
+        <mat-label>E-Mail</mat-label>
+        <input [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="">
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
         <mat-label>Birth Date</mat-label>
         <input [disabled]="loading" [(ngModel)]="birthDate" matInput placeholder="" [matDatepicker]="picker">
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
@@ -52,7 +59,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button [disabled]="loading" mat-button>Cancel</button>
+    <button (click)="dialogRef.close()" [disabled]="loading" mat-button>Cancel</button>
     <button [disabled]="loading" mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
   </div>
 </div>
