--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,25 @@
-<button class="add-user-button"
-(click)="openDialog()"
- mat-fab color="primary"
- matTooltip="Add user" [matTooltipPosition]="'above'">
-    <mat-icon>add</mat-icon>
+<mat-card>
+  <mat-card-content>
+    <table class="user-table">
+
+      <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+      </tr>
+
+      <tr *ngFor="let user of allUsers" [routerLink]="['/user/' + user.customIdName]">
+        <td>{{ user.firstName }} {{ user.lastName }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.city }}</td>
+      </tr>
+
+    </table>
+  </mat-card-content>
+</mat-card>
+
+
+<button class="add-user-button" (click)="openDialog()" mat-fab color="primary" matTooltip="Add user"
+  [matTooltipPosition]="'above'">
+  <mat-icon>add</mat-icon>
 </button>
