--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
     <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
         <div class="logo-container">
-        <img class="logo" src="/assets/img/log.png">
-    </div>
+            <div class="logo-container">
+                <img class="logo" src="/assets/img/log.png">
+                <h5>Simple CRM</h5>
+            </div>
+        </div>
 
-    <ul class="menu-items">
-        <li routerLink="/" routerLinkActive="router-link-active" ><mat-icon>fact_check</mat-icon>  Dashboard</li>
-        <li routerLink="/user" routerLinkActive="router-link-active" ><mat-icon>perm_identity</mat-icon> User</li>
-    </ul>
+        <ul class="menu-items">
+            <li routerLink="/" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon> Dashboard</li>
+            <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon> User</li>
+        </ul>
     </mat-drawer>
 
     <div class="example-sidenav-content">
