--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -14,6 +14,7 @@
         <div class="user-details">
             <h2>{{user.firstName}} {{user.lastName}}</h2> <br>
             <h4>{{user.email}}</h4>
+            <!-- <h4>{{user.birthDate}}</h4> -->
         </div>
 
     </mat-card-content>
