dashboard info added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,17 @@
-<p>dashboard works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>About App</mat-card-title>
+    </mat-card-header>
+    <b class="text">
+        Was ist eine CRUD app?
+        What is a CRUD App and How to Build One
+        A CRUD app is a specific type of
+        software application that consists of four basic
+        operations; Create, Read, Update, Delete. At a high level,
+        CRUD apps consist of three parts; the database,
+        user interface, and APIs.
+    </b>
+    <mat-card-actions align="end">
+        <button class="try" mat-raised-button color="primary" routerLink="/user">Try it</button>
+    </mat-card-actions>
+</mat-card>
